crates/snow-parser/tests/snapshots/parser_tests__sum_type_deriving_clause_snapshot.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..34
  SUM_TYPE_DEF@0..34
    TYPE_KW@0..4 "type"
    NAME@4..9
      IDENT@4..9 "Shape"
    DO_KW@9..11 "do"
    NEWLINE@11..12 "\n"
    VARIANT_DEF@12..18
      IDENT@12..18 "Circle"
    NEWLINE@18..19 "\n"
    END_KW@19..22 "end"
    DERIVING_CLAUSE@22..34
      IDENT@22..30 "deriving"
      L_PAREN@30..31 "("
      IDENT@31..33 "Eq"
      R_PAREN@33..34 ")"
  EOF@34..34 ""
