crates/snow-parser/tests/snapshots/parser_tests__sum_type_generic.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"type Option<T> do\\n  Some(T)\\n  None\\nend\")"
---
SOURCE_FILE@0..32
  SUM_TYPE_DEF@0..32
    TYPE_KW@0..4 "type"
    NAME@4..10
      IDENT@4..10 "Option"
    GENERIC_PARAM_LIST@10..13
      LT@10..11 "<"
      IDENT@11..12 "T"
      GT@12..13 ">"
    DO_KW@13..15 "do"
    NEWLINE@15..16 "\n"
    VARIANT_DEF@16..23
      IDENT@16..20 "Some"
      L_PAREN@20..21 "("
      TYPE_ANNOTATION@21..22
        IDENT@21..22 "T"
      R_PAREN@22..23 ")"
    NEWLINE@23..24 "\n"
    VARIANT_DEF@24..28
      IDENT@24..28 "None"
    NEWLINE@28..29 "\n"
    END_KW@29..32 "end"
  EOF@32..32 ""
