crates/snow-parser/tests/snapshots/parser_tests__sum_type_multiple_positional.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"type Pair do\\n  Pair(Int, Int)\\nend\")"
---
SOURCE_FILE@0..28
  SUM_TYPE_DEF@0..28
    TYPE_KW@0..4 "type"
    NAME@4..8
      IDENT@4..8 "Pair"
    DO_KW@8..10 "do"
    NEWLINE@10..11 "\n"
    VARIANT_DEF@11..24
      IDENT@11..15 "Pair"
      L_PAREN@15..16 "("
      TYPE_ANNOTATION@16..19
        IDENT@16..19 "Int"
      COMMA@19..20 ","
      TYPE_ANNOTATION@20..23
        IDENT@20..23 "Int"
      R_PAREN@23..24 ")"
    NEWLINE@24..25 "\n"
    END_KW@25..28 "end"
  EOF@28..28 ""
