crates/snow-parser/tests/snapshots/parser_tests__sum_type_simple.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"type Shape do\\n  Circle(Float)\\n  Rectangle(width :: Float, height :: Float)\\n  Point\\nend\")"
---
SOURCE_FILE@0..73
  SUM_TYPE_DEF@0..73
    TYPE_KW@0..4 "type"
    NAME@4..9
      IDENT@4..9 "Shape"
    DO_KW@9..11 "do"
    NEWLINE@11..12 "\n"
    VARIANT_DEF@12..25
      IDENT@12..18 "Circle"
      L_PAREN@18..19 "("
      TYPE_ANNOTATION@19..24
        IDENT@19..24 "Float"
      R_PAREN@24..25 ")"
    NEWLINE@25..26 "\n"
    VARIANT_DEF@26..63
      IDENT@26..35 "Rectangle"
      L_PAREN@35..36 "("
      VARIANT_FIELD@36..48
        NAME@36..41
          IDENT@36..41 "width"
        TYPE_ANNOTATION@41..48
          COLON_COLON@41..43 "::"
          IDENT@43..48 "Float"
      COMMA@48..49 ","
      VARIANT_FIELD@49..62
        NAME@49..55
          IDENT@49..55 "height"
        TYPE_ANNOTATION@55..62
          COLON_COLON@55..57 "::"
          IDENT@57..62 "Float"
      R_PAREN@62..63 ")"
    NEWLINE@63..64 "\n"
    VARIANT_DEF@64..69
      IDENT@64..69 "Point"
    NEWLINE@69..70 "\n"
    END_KW@70..73 "end"
  EOF@73..73 ""
