crates/snow-parser/tests/snapshots/parser_tests__trailing_closure_basic.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"run() do\\n  42\\nend\")"
---
SOURCE_FILE@0..14
  CALL_EXPR@0..14
    NAME_REF@0..3
      IDENT@0..3 "run"
    ARG_LIST@3..5
      L_PAREN@3..4 "("
      R_PAREN@4..5 ")"
    TRAILING_CLOSURE@5..14
      DO_KW@5..7 "do"
      BLOCK@7..11
        NEWLINE@7..8 "\n"
        LITERAL@8..10
          INT_LITERAL@8..10 "42"
        NEWLINE@10..11 "\n"
      END_KW@11..14 "end"
  EOF@14..14 ""
