crates/snow-parser/tests/snapshots/parser_tests__tuple_expression.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"(1, 2, 3)\")"
---
SOURCE_FILE@0..7
  TUPLE_EXPR@0..7
    L_PAREN@0..1 "("
    LITERAL@1..2
      INT_LITERAL@1..2 "1"
    COMMA@2..3 ","
    LITERAL@3..4
      INT_LITERAL@3..4 "2"
    COMMA@4..5 ","
    LITERAL@5..6
      INT_LITERAL@5..6 "3"
    R_PAREN@6..7 ")"
  EOF@7..7 ""
