crates/snow-parser/tests/snapshots/parser_tests__type_alias_generic.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"type StringResult<T> = Result<T, String>\")"
---
SOURCE_FILE@0..36
  TYPE_ALIAS_DEF@0..36
    TYPE_KW@0..4 "type"
    NAME@4..16
      IDENT@4..16 "StringResult"
    GENERIC_PARAM_LIST@16..19
      LT@16..17 "<"
      IDENT@17..18 "T"
      GT@18..19 ">"
    EQ@19..20 "="
    IDENT@20..26 "Result"
    GENERIC_ARG_LIST@26..36
      LT@26..27 "<"
      IDENT@27..28 "T"
      COMMA@28..29 ","
      IDENT@29..35 "String"
      GT@35..36 ">"
  EOF@36..36 ""
