crates/snow-parser/tests/snapshots/parser_tests__type_alias_simple.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"type Alias = Int\")"
---
SOURCE_FILE@0..13
  TYPE_ALIAS_DEF@0..13
    TYPE_KW@0..4 "type"
    NAME@4..9
      IDENT@4..9 "Alias"
    EQ@9..10 "="
    IDENT@10..13 "Int"
  EOF@13..13 ""
