crates/snow-parser/tests/snapshots/parser_tests__unary_bang.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"!flag\")"
---
SOURCE_FILE@0..5
  UNARY_EXPR@0..5
    BANG@0..1 "!"
    NAME_REF@1..5
      IDENT@1..5 "flag"
  EOF@5..5 ""
