crates/snow-parser/tests/snapshots/parser_tests__unary_negate.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"-x\")"
---
SOURCE_FILE@0..2
  UNARY_EXPR@0..2
    MINUS@0..1 "-"
    NAME_REF@1..2
      IDENT@1..2 "x"
  EOF@2..2 ""
