crates/snow-parser/tests/snapshots/parser_tests__unary_not_keyword.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"not done\")"
---
SOURCE_FILE@0..7
  UNARY_EXPR@0..7
    NOT_KW@0..3 "not"
    NAME_REF@3..7
      IDENT@3..7 "done"
  EOF@7..7 ""
