crates/snow-parser/tests/snapshots/parser_tests__unary_with_binary.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"-x + y\")"
---
SOURCE_FILE@0..4
  BINARY_EXPR@0..4
    UNARY_EXPR@0..2
      MINUS@0..1 "-"
      NAME_REF@1..2
        IDENT@1..2 "x"
    PLUS@2..3 "+"
    NAME_REF@3..4
      IDENT@3..4 "y"
  EOF@4..4 ""
